syntax = "proto3";

option java_multiple_files = true;
option java_package = "protobuf.orders";

package clothes;

message OrderProto {
  int64 id = 1;
  ClothesProtoInfo clothes = 2;
  UsersProtoInfo userInfo = 3;
}

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  rpc DeleteOrder (DeleteOrderRequest) returns (DeleteOrderResponse);
  rpc FindOrderByEmail (FindOrderRequest) returns (FindOrderResponse);
}

message CreateOrderRequest {
  string userEmail = 1;
  string idCloth = 2;
}

message CreateOrderResponse {
  OrderProto order = 1;
}

message UsersProtoInfo {
  string id = 1;
  string email = 2;
  string phone = 3;
  int64 age = 4;
  string firstName = 5;
  string middleName = 6;
  string lastName = 7;
}

message ClothesProtoInfo {
  string id = 1;
  string name = 2;
  string size = 3;
  int32 quantity = 4;
  double price = 5;
  Payment payment = 6;
  string isbnOfCloth = 7;

  enum Payment {
    PAID = 0;
    NOT_PAID = 1;
    IN_SHOP = 2;
  }
}

message DeleteOrderRequest {
  int64 id = 1;
}

message DeleteOrderResponse {
  string message = 1;
}

message FindOrderRequest {
  string email = 1;
}

message FindOrderResponse {
  OrderProto oder = 1;
}

